side nav update

--- a/front-end/src/pages/Guide/GuidePage.less
+++ b/front-end/src/pages/Guide/GuidePage.less
@@ -76,7 +76,7 @@
       border-bottom: none;
       padding-top: .625em;
       padding-bottom: .625em;
-      padding-left: .9375em;
+      padding-left: .5rem;
       color: #0072ce;
       border-left: 3px solid transparent;
 
