--- a/front-end/src/App.less
+++ b/front-end/src/App.less
@@ -166,59 +166,86 @@ header h1 {
     background: 	#f7f8f9;
   }
 }
-
-.tabbed_navigation {
-  color: #181d1f;
-  margin-top: 2rem;
-
-    fieldset {display: inline-flex;}
-
-    > .row {
-      margin-bottom: 0;
-    }
-  
-    .tab {
-      padding: 1rem 2rem .8rem;
-
-      // font-size: math.div(19px, $base-font-size-px) + em;
-      font-weight: 500;
-
-      &.active {
-        border: 1px solid #c3c4c4;
-        border-bottom: none;
-        color: #000;
-        background: #f7f8f9;
-        pointer-events: none;
-        position: relative;
-      }
-
-      &:not(.active) {
-        color: #0050b4;
-        background: 	#fff;
-        border: none;
-
-        &:hover {
-          color: 002d72;
-        }
-
-        &:focus {
-          color: #002d72;
-        }
-
-        &::after {
-          content: '';
-          border-top: solid 1px #5a5d61;
-          display: block;
-        }
-      }
-    }
-  }
-
   .evaluator-hits-row{
     > .row {
       margin-top: 0;
       margin-bottom: 0;
       padding-bottom: .5rem;
       background: #f7f8f9;
+    }
+  }
+
+  .tabbed_navigation {
+    color: @black;
+    margin-top: 2rem;
+    margin-bottom: -1px;
+    z-index: 1;
+  
+    fieldset {
+      display: inline-flex;
+    }
+  
+    > .row {
+      margin-bottom: 0;
+    }
+
+    .table_guide {margin: 1rem 0 0 auto}
+  
+    .tab {
+      padding: 1rem 2rem 0.8rem;
+  
+      font-size: unit((19px / @base-font-size-px), em);
+      font-weight: 500;
+  
+      .cf-icon-svg-wrapper {
+        margin-right: 5px;
+      }
+  
+      .link-text::after {
+        content: '';
+        border-top: solid 1px @gray;
+        display: block;
+      }
+  
+      &.active {
+        border: 1px solid @gray-30;
+        border-bottom: 1px solid @gray-5;
+        color: @black;
+        background: @gray-5;
+        pointer-events: none;
+        position: relative;
+        border-bottom: 1px solid @gray-5;
+  
+        &::after {
+          content: '';
+          display: block;
+          width: calc(100% - 2px);
+          outline: 2px solid @gray-5;
+          position: absolute;
+          bottom: -1px;
+          left: 1px;
+          z-index: 1;
+        }
+      }
+  
+      &:not(.active) {
+        color: @pacific-dark;
+        background: @white;
+        border: none;
+  
+        &:hover {
+          color: @navy-dark;
+        }
+  
+        &:focus {
+          color: @navy-dark;
+        }
+  
+        .link-text::after {
+          content: '';
+          border-top: solid 1px @gray;
+          display: block;
+        }
+      }
     }
   }
