update css color values

--- a/front-end/src/App.less
+++ b/front-end/src/App.less
@@ -39,7 +39,6 @@ body,
 
   h4 {
     margin-bottom: 0;
-    margin-left: .5rem;
   }
 
   .downloader {
@@ -184,9 +183,9 @@ header h1 {
 
 .evaluator-hits-row {
   .row__download {
-    border-top: 1px solid #c3c4c4;
+    border-top: 1px solid @gray-30;
     padding-top: 1rem;
-    background: 	#f7f8f9;
+    background: 	@gray-5;
   }
 }
   .evaluator-hits-row{
@@ -194,7 +193,6 @@ header h1 {
       margin-top: 0;
       margin-bottom: 0;
       padding-bottom: .5rem;
-      background: #f7f8f9;
     }
   }
 
