--- a/front-end/src/pages/Guide/GuidePage.less
+++ b/front-end/src/pages/Guide/GuidePage.less
@@ -1,7 +1,7 @@
 @import (reference) '../../index.less';
 
 #main {
-  border-top: 1px solid #b4b5b6;
+  border-top: 1px solid @gray-40;
 
   .content-pad {
     margin-left: .5rem;
@@ -17,18 +17,18 @@
     padding-left: 1rem;
     height: 100%;
     border-width: 0;
-    border-left: 1px solid #b4b5b6;
+    border-left: 1px solid @gray-40;
 
     p {
       max-width: inherit;
     }
 
     .features {
-      border: 1px solid #5a5d61;
+      border: 1px solid @gray;
       margin-bottom: 1rem;
 
       td {
-        border: 1px solid #d2d3d5;
+        border: 1px solid @gray-20;
         width: 33%;
         text-align: left;
         vertical-align: top;
@@ -56,7 +56,7 @@
 }
 
 .hightlight {
-  background: #e7e8e9;
+  background: @gray-10;
 }
 
 #sidebar {
@@ -77,15 +77,15 @@
       padding-top: .625em;
       padding-bottom: .625em;
       padding-left: .5rem;
-      color: #0072ce;
-      border-left: 3px solid transparent;
+      color: @pacific;
+      border-left: 4px solid transparent;
 
     &[data-status='active'] {
-      border-left: 3px solid #000;
+      border-left: 4px solid @black;
     }
 
     &:hover {
-      border-left: 3px solid #20aa3f;
+      border-left: 4px solid @green;
     }
   }
 }
