--- a/front-end/src/App.less
+++ b/front-end/src/App.less
@@ -123,7 +123,7 @@ header h1 {
 
   .row__download {
     margin: 0;
-    padding: 0.75em 1em 0.75em 1em;
+    padding: 0.75em 1em;
     background-color: @gray-5;
   }
   // max-height: 95vh;
@@ -133,6 +133,7 @@ header h1 {
   .row__download {
     padding-left: 1.5em;
   }
+
   .results {
     display: flex;
     width: 100%;
@@ -180,100 +181,98 @@ header h1 {
   font-weight: 500;
 }
 
+.a-btn__warning {
+  .cf-icon-svg-wrapper {
+    margin-right: 5px;
+  }
+}
 
 .evaluator-hits-row {
   .row__download {
     border-top: 1px solid @gray-30;
     padding-top: 1rem;
-    background: 	@gray-5;
+    background: @gray-5;
+  }
+
+  > .row {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-bottom: 0.5rem;
   }
 }
-  .evaluator-hits-row{
-    > .row {
-      margin-top: 0;
-      margin-bottom: 0;
-      padding-bottom: .5rem;
-    }
+
+.tabbed_navigation {
+  color: @black;
+  margin-top: 2rem;
+  margin-bottom: -1px;
+  z-index: 1;
+
+  fieldset {
+    display: inline-flex;
   }
 
-  .tabbed_navigation {
-    color: @black;
-    margin-top: 2rem;
-    margin-bottom: -1px;
-    z-index: 1;
-  
-    fieldset {
-      display: inline-flex;
-    }
-  
-    > .row {
-      margin-bottom: 0;
+  > .row {
+    margin-bottom: 0;
+  }
+
+  .table_guide {
+    margin: 1rem 0 0 auto;
+  }
+
+  .tab {
+    padding: 1rem 2rem 0.8rem;
+    font-size: unit((19px / @base-font-size-px), em);
+    font-weight: 500;
+
+    .cf-icon-svg-wrapper {
+      margin-right: 5px;
     }
 
-    .table_guide {margin: 1rem 0 0 auto}
-  
-    .tab {
-      padding: 1rem 2rem 0.8rem;
-  
-      font-size: unit((19px / @base-font-size-px), em);
-      font-weight: 500;
-  
-      .cf-icon-svg-wrapper {
-        margin-right: 5px;
+    .link-text::after {
+      content: '';
+      border-top: solid 1px @gray;
+      display: block;
+    }
+
+    &.active {
+      border: 1px solid @gray-30;
+      color: @black;
+      background: @gray-5;
+      pointer-events: none;
+      position: relative;
+      border-bottom: 1px solid @gray-5;
+
+      &::after {
+        content: '';
+        display: block;
+        width: calc(100% - 2px);
+        outline: 2px solid @gray-5;
+        position: absolute;
+        bottom: -1px;
+        left: 1px;
+        z-index: 1;
       }
-  
+    }
+
+    &:not(.active) {
+      color: @pacific-dark;
+      background: @white;
+      border: none;
+
+      &:hover {
+        color: @navy-dark;
+      }
+
+      &:focus {
+        color: @navy-dark;
+      }
+
       .link-text::after {
         content: '';
         border-top: solid 1px @gray;
         display: block;
       }
-  
-      &.active {
-        border: 1px solid @gray-30;
-        border-bottom: 1px solid @gray-5;
-        color: @black;
-        background: @gray-5;
-        pointer-events: none;
-        position: relative;
-        border-bottom: 1px solid @gray-5;
-  
-        &::after {
-          content: '';
-          display: block;
-          width: calc(100% - 2px);
-          outline: 2px solid @gray-5;
-          position: absolute;
-          bottom: -1px;
-          left: 1px;
-          z-index: 1;
-        }
-      }
-  
-      &:not(.active) {
-        color: @pacific-dark;
-        background: @white;
-        border: none;
-  
-        &:hover {
-          color: @navy-dark;
-        }
-  
-        &:focus {
-          color: @navy-dark;
-        }
-  
-        .link-text::after {
-          content: '';
-          border-top: solid 1px @gray;
-          display: block;
-        }
-      }
     }
-  }
-
-.a-btn__warning {
-  .cf-icon-svg-wrapper {
-    margin-right: 5px;
   }
 }
 
@@ -284,4 +283,3 @@ header h1 {
 .evaluator-metadata {
   max-width: 870px;
 }
-
