Fix loading overlay and submit range inputs on enter

--- a/front-end/src/components/Loader/Loader.less
+++ b/front-end/src/components/Loader/Loader.less
@@ -33,6 +33,10 @@
   height: 100%;
   position: relative;
 
+  .loader_wrapper {
+    height: auto;
+  }
+
   .loader_message {
     margin-top: unit((@grid_gutter-width * 1.5 / @base-font-size-px), em);
   }
