--- a/front-end/src/components/Accordion/Accordion.less
+++ b/front-end/src/components/Accordion/Accordion.less
@@ -69,3 +69,15 @@
     margin-bottom: unit((-@grid_gutter-width / 3 / @base-font-size-px), em);
   }
 }
+
+// expandable overrides that should be handled by RDS
+// no background expandable variant
+.o-expandable {
+  background-color: inherit !important;
+  border-width: 1px 0 !important;
+}
+
+// remove double border in accordion
+.o-expandable-group .o-expandable__padded + .o-expandable__padded {
+  margin-top: -1px;
+}
