--- a/front-end/src/components/Loader/Loader.less
+++ b/front-end/src/components/Loader/Loader.less
@@ -5,6 +5,7 @@
   position: absolute;
   inset: 0;
   z-index: 1000;
+  min-height: 90vh;
 
   &__background {
     background-color: rgb(0 0 0 / 60%);
