--- a/front-end/src/pages/Guide/GuidePage/GuidePage.less
+++ b/front-end/src/pages/Guide/GuidePage/GuidePage.less
@@ -59,6 +59,10 @@
   background: @gray-10;
 }
 
+.imageBorder {
+  border: 1px solid @gray-20;
+}
+
 #sidebar {
   width: 100%;
   max-width: 300px;
