Pull in DSR update switching font to Source Sans 3

--- a/front-end/src/App.less
+++ b/front-end/src/App.less
@@ -47,7 +47,7 @@ body,
 }
 
 // remove extra padding from nav header and align nav-items
-.m2-nav .navbar {
+.m2-nav .navbar-static {
   padding: 0;
 
   .h4 {
