--- a/front-end/src/pages/Evaluator/results/EvaluatorResults.less
+++ b/front-end/src/pages/Evaluator/results/EvaluatorResults.less
@@ -8,7 +8,7 @@
 .results-container {
   // background-color: @gray-5;
 
-  .row__download {
+  .row__action {
     margin: 0;
     padding: 0.75em 1em;
     background-color: @gray-5;
@@ -17,7 +17,7 @@
 }
 
 .results-container__all {
-  .row__download {
+  .row__action {
     padding-left: 1.5em;
   }
 
