Update nested checkbox group event handling

--- a/front-end/src/components/TabbedNavigation/TabbedNavigation.less
+++ b/front-end/src/components/TabbedNavigation/TabbedNavigation.less
@@ -48,7 +48,7 @@
     &:not(.active) {
       color: @pacific-dark;
       background: @white;
-      border-bottom: none;
+      border: none;
 
       &:hover {
         color: @navy-dark;
