--- a/front-end/src/components/TabbedNavigation/TabbedNavigation.less
+++ b/front-end/src/components/TabbedNavigation/TabbedNavigation.less
@@ -60,3 +60,10 @@
     }
   }
 }
+
+// tab panel styling
+// TODO: consider where this should go
+.tab-panel {
+  border-top: 1px solid @gray-30;
+  margin-top: 1px;
+}
