Fix unit mismatch in modal padding and right align account download button.

--- a/front-end/src/components/Modal/Modal.less
+++ b/front-end/src/components/Modal/Modal.less
@@ -4,7 +4,7 @@ dialog.modal {
   border-radius: 5px;
   max-width: 625px;
   min-width: 475px;
-  padding: 30px;
+  padding: 2rem;
   border: none;
   border-top: 5px solid @green;
   outline: none;
